# shards

./: .AllIRsAreMonster.aux  .ExtractRooster.aux  .ExtractRoosterMetaCoq.aux  .ExtractRoosterStandalone.aux  .MF1IsMetaMycelium.aux  .MetaCoqIsMonster.aux  .RoosterCrow.aux  .RoosterMetaCoq.aux  .gitmodules  .tmp-brainfuck-locate.txt  71_INVITES.md  AIRDROP_SOP.md  AUTOSEMIOSIS_DISCOVERY.md  AllIRsAreMonster.v  AllIRsAreMonster.vo  BOOTTAPE1.emoji  BOOTTAPE1.json  CONNECT_LAPTOP.md  Cargo.toml  Cargo_simpleexpr.toml  DOCUMENTATION.md  Dockerfile  ENTROPY_SHARDING_PRIMES.md  ExtractRooster.v  ExtractRoosterMetaCoq.v  ExtractRoosterStandalone.v  FRENS.md  GODEL_PAYMENT_ADDRESSES.md  HECKE_MAASS_MANIFEST.json  LICENSE  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  MF1IsMetaMycelium.v  MONSTER_TAROT_POSTERS.txt  Makefile  MetaCoqIsMonster.v  MonsterCategory.v  MonsterSpace196k.v  MothersWisdomStandalone.lean  (+130 more)
.buildkite/: pipeline.yml
agents/: evaluate.py  generate_leaderboard.py
bbs-8080-zos/: .tmp-brainfuck-locate2.txt  convert_to_monster_harmonic.py  monster_harmonic_t2_sample.json  shard_to_15_buckets.py
bbs_door/: Cargo.toml  DOCUMENTATION.md  GAME_REVIEW.md  LICENSE  QEMU_WASM_REVIEW.md  README.md  build_emulator.sh  build_retro.sh  monster_arcade_door.sh  shell_retro.nix
bbs_door/binaries/: monster-arcade-x86_64
bbs_door/src/: main.rs
cicada-moltbook/: Cargo.toml  README.md  flake.nix  prove_deployment.sh  prove_deployment_simple.py
crowning-ceremony/: Cargo.toml
data/: 71_agent_adaptations.json  biosemiotics_extent.json  biosemiotics_timeline.json  cusp_dirac_delta.json  dna_fingers_monster.json  emoji_SimpleExpr.rec_686e510a6699f2e1ff1b216c16d94cd379ebeca00c030a79a3134adff699e06c.json  fingers_wikidata_proof.json  frankfurt.txt  game_state_compressed.json  game_tapes.json  github_emotes_monster.json  gott.txt  hecke_muse_zkwitness.json  hecke_operators.json  hecke_resonance.json  mame_platform_compilations.json  metacoq_bigmama_monster.json  monster_dance_competition_2026.json  mothers_wisdom_agent_tests.json  mothers_wisdom_all_platforms.json  mothers_wisdom_perf.json  mothers_wisdom_roms.json  mothers_wisdom_zkhecke.json  mothers_wisdom_zkperf.json  muses_emojis_shards.json  nine_muses_71_shards.json  pure_connection_test_results.json  qbert_ai_battle_arena.json  qbert_execution_path.json  ripgrep_monster.txt  witness_breaking.txt  zx81.txt
data-acquisition/: flake.nix
data-shards-71/: flake.nix  result
debian/: control
docs/: MONSTER_LOADOUT_TRADING.md  MONSTER_MAGIC_NUMBERS.md  monster-ship-loadout.html  monster_walk_data.js
doorgame/: Cargo.toml  README.md  auto_record.sh  build_all_archs.sh  cast_to_zkrdfa.py  cicada71.book.md  (+23 more)
gabulab/: Cargo.toml  README.md  apply_lattice.py  create_rooster_tapes.py  demo.py  expand_parquet_net.py  flake.nix  gossip_status.py  harmonics.json  p2p_gossip_proof.rs  packfile_decls_sharded.json  packfile_objects_sharded.json  packfile_shards.json  parquet_lattice.json  perf_gossip.sh  read_all_shards.py  read_packfiles.py  rooster_crow_tapes.json  send_rooster_signal.sh  shard_index_verified.json  shard_packfile_decls.py  shard_packfile_objects.py  test_kernel_driver.py  tradewars_gist.md  tradewars_gist.py  tradewars_lobsterboats.py  value_lattice_8m.json
gabulab/gossip-flake/: flake.nix
gabulab/kernel/: Makefile  README.md  monster_sampler.c
gabulab/lean/: Gabulab.lean  MonsterWalkProof.lean  P2PGossipProof.lean  RoosterCrowProof.lean
gabulab/minizinc/: harmonics.mzn  p2p_gossip.mzn  rooster_crow.mzn
gabulab/prolog/: gabulab.pl
gabulab/src/: harmonics.rs  lib.rs  promptbook.rs  topology.rs  wasm.rs
hecke_bott_sharding/: Cargo.toml  README.md
hecke_bott_sharding/src/: lib.rs
moltboot/: Cargo.toml  flake.nix  moltboot_proof.json  moltboot_witness.rdf  pipelight.toml
moltboot/src/: main.rs
osm-planet-torrent/: Cargo.toml  README.md  flake.nix
osm-planet-torrent/secrets/: solana-keypair.yaml
osm-planet-torrent/src/: ipfs.rs  main.rs  shard.rs  solana.rs
scp-zk71/: Cargo.toml  README.md  flake.nix
scp-zk71/src/: main.rs
shard0/zktls/: Cargo.toml  flake.nix  frens_nathan_witness.json  frens_phone.rs  frens_proof.rs
telegraph-zk/: Cargo.toml
telegraph-zk/src/: main.rs
wasm-bbs/: Cargo.toml  index.html
wasm-bbs/src/: lib.rs
(+725 files in other folders)
