[package]
name = "gabulab"
version = "0.1.0"
edition = "2021"
authors = ["Meta-Introspector <shards@solfunmeme.com>"]
description = "Extract Monster Harmonics from Promptbooks - The Yeast of Thought and Mind"
license = "CC0-1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nom = "7.1"
petgraph = "0.6"
num-bigint = "0.4"
num-traits = "0.2"

# WASM
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[workspace]
members = [".", "lean-ffi", "prolog-ffi", "minizinc-ffi"]
