[package]
name = "moltboot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"

[[bin]]
name = "moltboot"
path = "src/main.rs"

[[bin]]
name = "generate_witness"
path = "src/bin/generate_witness.rs"
