[package]
name = "osm-planet-torrent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
lava_torrent = "0.10"
sha2 = "0.10"
url = "2.5"
ipfs-api-backend-hyper = { version = "0.6", features = ["with-builder"] }
solana-sdk = "1.18"
solana-client = "1.18"
spl-memo = "4.0"
bs58 = "0.5"
