[package]
name = "scp-zk71"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
walkdir = "2.4"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "zk-clone"
path = "src/bin/zk_clone.rs"

[[bin]]
name = "toxicity-scan"
path = "src/bin/toxicity_scan.rs"

[[bin]]
name = "shard-isolate"
path = "src/bin/shard_isolate.rs"

[[bin]]
name = "safe-rewrite"
path = "src/bin/safe_rewrite.rs"

[[bin]]
name = "scp-zk71"
path = "src/main.rs"
