[package]
name = "telegraph-zk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

[[bin]]
name = "telegraph"
path = "src/main.rs"
