[package]
name = "wasm-bbs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
md5 = "0.7"
web-sys = { version = "0.3", features = ["Window", "Location"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
